# ERN_relics_helper

./: .gitignore  pyproject.toml  【艾尔登法环：黑夜君临】DLC全遗物、武器固有效果、护符、潜在能力、武器随机buff（适配游戏1.03.5）.xlsx  【艾爾登法環：黑夜君臨】DLC全遺物、武器固有效果、護符、潛在能力、武器隨機buff（適配遊戲1.03.5）.xlsx
config/: relic-helper.json
docs/: implementation-usage.md  relic-workflow.md
ern_relics_helper/: __init__.py  automation.py  cli.py  config.py  evaluator.py  excel_io.py  models.py  ocr.py  terms.py  win32_api.py
outputs/relic_terms_table/: 遺物詞條對照表.xlsx
tests/: test_evaluator.py  test_excel_io.py  test_ocr.py  test_terms.py
